Create endpoint for adding new students
After a student is added, an invitation email
is send to him. The student can complete his
registration in the site by following an invitation link
part of the email.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
+# Database properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/dopelemon
+spring.datasource.url=jdbc:postgresql://localhost:5432/dopelemon?createDatabaseIfNotExist=true
 spring.datasource.username=dopelemon
 spring.datasource.password=dev
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+
+# Email properties
+mail.server = smtp.gmail.com
+mail.transport.protocol = smtp
+mail.port = 587
+mail.username = username
+mail.password = password
